sender :: gradle config fixed