@@ -14,11 +14,6 @@ configurations {
     }
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
-}
-
 bootJar {
     mainClassName = 'com.jvmops.workers.sender.Main'
 }
@@ -40,21 +35,9 @@ task dockerBuildImageSender(type: DockerBuildImage) {
     dependsOn(bootJar)
 }
 
-// Java 14
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += [
-            '--enable-preview',
-            '-XX:+ShowCodeDetailsInExceptionMessages'
-    ]
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 // for github actions and seamless dockerhub integration
